Add generic component search box and add a dynamic actor search

--- a/src/components/ActorCard/ActorCard.css
+++ b/src/components/ActorCard/ActorCard.css
@@ -1,8 +1,8 @@
-.ActorCard {
+.c-actor {
     margin: 2px;
     padding: 10px;
 }
 
-div.ActorCard > Card.Img {
+div.c-actor > Card.Img {
     cursor: pointer;
 } 
